implemented slider and colors

--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> 
-   
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto Slab' rel='stylesheet'>
 
     <link rel="stylesheet" href="CSS/index.css"/>
     <link rel="stylesheet" href="CSS/navbar.css"/>
@@ -59,14 +56,12 @@
 
   <div class="container-fluid about-container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding-top: 5%; padding-bottom: 5%;">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding-top: 10%; text-align: center;">
         <h class = "heading-font"> About me </h>
       </div>
       <div class="row">
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 ">
-        <p class="paragraphs">I'm a recent graduate from UNC Chapel Hill with a Bachelors in Physics and Astronomy, along with
-            minors in Business and Computer Science.
-        </p>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" >
+          <img class = "profile-pic" alt="Lixuan Xia Software Engineer" src = "Assets/square-centered.jpg">
         </div>
         <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
           <p class="paragraphs">I'm a recent graduate from UNC Chapel Hill with a Bachelors in Physics and Astronomy, along with
@@ -95,7 +90,7 @@
           <!-- Tab panes -->
           <div class="tab-content" style="padding-top: 0%;">
             <div id="languages" class="tab-pane active"><br>
-              <ul class="">
+              <ul class="list-horizontal card-font">
                 <li>Java</li>
                 <li>Javascript ES6+</li>
                 <li>HTML/CSS</li>
@@ -127,7 +122,7 @@
      
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding-top: 5%; padding-bottom: 5%;">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding-top: 5%; padding-bottom: 5%; text-align: center;">
         <h class = "heading-font"> Projects</h>
       </div>
     </div>
@@ -141,7 +136,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding-top: 5%; padding-bottom: 5%;">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding-top: 5%; padding-bottom: 5%; text-align: center;">
         <h class = "heading-font"> Experience </h>
       </div>
     </div>
@@ -156,7 +151,7 @@
   <div class = "footer-container" id="contact" style="text-align: center;"> 
     <h class = "heading-font">Get in touch!</h>
 
-    <div class="flex-center" style="margin-top: 5%;">
+    <div class="flex-center" style="margin-top: 3%;">
         <a href="https://github.com/LeekSwan" target="_icon1" class="icon1 text-shadow-drop-center" title="Take a look at my projects!">
             <i class="fab fa-github fa-4x fa-fw;"></i>
         </a>
@@ -167,7 +162,7 @@
             <i class="fas fa-envelope fa-4x fa-fw"></i>
         </a>
         </div>
-    <h6 class = "designed">Designed and built by Lixuan Xia</h6>
+        <h6 class = "designed">Designed and built by Lixuan Xia</h6>
   </div>
 
   <a class="back2Top" id="back2Top"  href="#">
