added responsive card fonts and picutres

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             I'm naturally curious and driven to always be better than the day before.
           </p>
           <p class="paragraphs">
-              Listed bellow are a few technologies i've been working with recently:
+              Listed below are a few technologies i've been working with recently:
           </p>
 
           <ul class="nav nav-tabs" role="tablist">
