update about me

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
           <img class = "profile-pic" alt="Lixuan Xia Software Engineer" src = "Assets/square-centered.jpg">
         </div>
         <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-          <p class="paragraphs">I'm a full stack developer based out of Washington DC with experience in AI, data analysis & visualization and data pipelines, with a history of leadership and community-building. 
+          <p class="paragraphs">I'm a full stack developer based out of Washington DC experienced in fullstack development, AI, ETL pipelines and data analysis & visualization, with a history of leadership and community-building. 
             My primary tools are Python and Javascript but picking up new frameworks or languages isn't a problem for me. Naturally curious and driven to always be better than the day before.
           </p>
           <br>
           <p class="paragraphs">
-              Listed below are a few technologies I am experience in:
+              Listed below are a few technologies I'm experience in:
           </p>
 
           <ul class="nav nav-tabs" role="tablist">
